add the junit with mockito test cases for service and controller